--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <button id="screenshot">Screenshot</button>
     <button id="show-details">Show Details</button>
     <button id="show-story">Show Story</button>
+    <button id="show-colour">Show Temp Colour</button>
   </div>
   <div id="constellation-mode" style="display: none; margin-top: 10px;">
     <label for="brightness">Brightness: </label>
